--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -21,5 +22,9 @@
   },
   "devDependencies": {
     "prisma": "^6.0.0"
-  }
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
+  "type": "module" 
 }
