--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mui/material": "^6.1.9",
     "@mui/x-data-grid": "^7.23.0",
     "@prisma/client": "^6.0.0",
+    "bcrypt": "^5.1.1",
+    "jose": "^5.9.6",
+    "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^3.9.1",
     "maplibre-gl": "^4.7.1",
     "next": "15.0.3",
